<resources>
    <string name="app_name">QR and Barcode Scanner</string>
    <string name="https_www_youtube_com">https://www.youtube.com/</string>
    <string name="_22_03_2022">22:03:2022</string>
    <string name="scan">Scan</string>
    <string name="are_you_sure">Are you sure you want to delete?</string>
    <string name="delete">DELETE</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="success">Success</string>
    <string name="copy">Copy</string>
    <string name="your_scan_history_will_appear_here">Your scan history will appear here</string>
    <string name="about">About</string>
    <string name="prime_Scanner_about">The Prime Scanner app is the fastest QR code scanner and bar code scanner. It is a must have scanner app for all Android devices. Prime Scanner is extremely easy to use. Simple QR Code Scanner Free app with built-in quick scan you want to scan by pointing to QR or barcode and QR scanner will start scanning automatically and QR scan will be done and results will be saved in this app automatically.</string>
    <string name="prime_scanner">Prime Scanner</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_link">https://sites.google.com/view/prime-it-qr-code-reader</string>


</resources>